Implemented CRUD operations for Author entity